[package]
name = "asm_unroll"
version = "0.1.1"
edition = "2021"

description = "Provides unrolled for-loops within inline asm."
readme = "README.md"
repository = "https://github.com/RedRam567/asm_unroll"
license = "MIT OR Apache-2.0"
keywords = ["assembly", "unroll", "macro"]

[lib]
proc-macro = true

[dependencies]
# does not depend on syn or quote